--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,20 @@
 .App {
   text-align: center;
+  height: 10em;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.squares {
+  margin-top: 5em;
+  border: 1px solid black;
+  padding: 2em;
+  font-size: 1em;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.rows {
+  height: 5.5em;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.game-board {
+  margin-top: 3em;
 }
