--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 body {
-  border: 2em solid #254441;
-  /* height: 63em; */
-  background-color: #254441;
+  background-color: #A9DEF9;
   text-align: center;
 }
 
@@ -13,26 +11,25 @@ h1 {
 .App {
   text-align: center;
   height: 10em;
-  color: #FFFFFF;
+  color: black;
 }
 
 .game-display {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  background-color: #FF6F59;
+  align-items: center; 
   padding-bottom: 3em;
-  border: 5px solid #254441;
+
 }
 
 .squares {
-  width: 2.85em;
-  height: 2.85em;
+  width: 0.25em;
+  height: 0.25em;
   margin-top: 5em;
-  border: 1px solid #254441;
-  padding: 2em;
-  font-size: 0.5em;
+  border: 1px solid black;
+  padding: 1.5em;
+  font-size: 0.1em;
   background-color: #BEBEBE;
   color: #2E6171;
   font-weight: bold;
@@ -46,7 +43,7 @@ h1 {
 }
 
 .game-board {
-  border: 5px solid #254441;
+  border: 5px solid black;
 }
 
 .playing-message {
@@ -106,10 +103,14 @@ display: flex;
 .blank-square {
   background-color: antiquewhite;
 }
-/* .flag {
-  background-color: yellow;
-} */
+
 
 .flag >span {
   font-size: 2.5em;
+}
+
+.difficulty-level button {
+  background-color: lightgrey;
+  border: 2px solid black;
+  border-radius: 5px;
 }
