--- a/src/App.css
+++ b/src/App.css
@@ -109,8 +109,15 @@ display: flex;
   font-size: 2.5em;
 }
 
+button {
+  background-color: lightgrey;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
 .difficulty-level button {
   background-color: lightgrey;
   border: 2px solid black;
   border-radius: 5px;
 }
+
